--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "rm -rf dist && babel src/ -d dist/",
     "start": "node dist/server",
     "dev": "nodemon --ignore 'dist/**/*' --ignore 'node_modules/**/*' --exec 'npm run build && npm start'",
-    "predev": "npm run build",
-    "test": "test"
+    "predev": "npm run build"
   },
   "keywords": [
     "zeke"
@@ -16,19 +15,29 @@
   "author": "Viktor Zavala",
   "license": "MIT",
   "dependencies": {
-    "flow": "^0.2.3",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
+    "flow": "^0.2.3",
     "hapi": "^17.4.0"
+  },
+  "jest": {
+    "verbose": true,
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ]
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
