--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
+    "boom": "^7.2.0",
     "flow": "^0.2.3",
     "hapi": "^17.4.0"
   },
